--- a/test3.html
+++ b/test3.html
@@ -42,8 +42,14 @@
                 <h1 class="h4">IMG TITLE</h1>
                 <div class="btn-toolbar mb-2 mb-md-0">
                     <div class="btn-group mr-2">
+                        <button class="btn btn-sm btn-outline-secondary dropdown-toggle">删除</button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <div role="separator" class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Action</a>
+                        </div>
+                        <input type="text" class="form-control" placeholder="参数名称">
                         <button class="btn btn-sm btn-outline-secondary">叠加</button>
-                        <button class="btn btn-sm btn-outline-secondary">删除</button>
                     </div>
                 </div>
             </div>
@@ -60,6 +66,6 @@
     <script src="./modules/bootstrap/js/jquery.min.js"></script>
     <script src="./modules/bootstrap/js/popper.js"></script>
     <script src="./modules/bootstrap/js/bootstrap.min.js"></script>
-    <script src="./dist/js/main.js?v=1114"></script>
+    <script src="./dist/js/main.js?v=1120"></script>
 </body>
 </html>
